@@ -27,6 +27,7 @@
 	+ HasMany  can retrieve again the model and row after the weak
 	refence is garbage-collected. (Added to solve a bug in the doenload
 	bundle dialog)
+	+ EBox::Types::DomainName no longer accepts IP addresses as domain names
 0.12.103
 	+ Bugfix: fix SQL statement to fetch last rows to consolidate
 0.12.102
